# api

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  _config.yml  buf.gen.test.yaml  buf.gen.validate.yaml  buf.gen.yaml  buf.meshts.gen.yaml  buf.yaml  go.mod  go.sum  go.work  go.work.sum  index.md  package.json  pom.xml  pyproject.toml  pyvenv.cfg  requirements-dev.txt
dev/: README.md  (+3 more)
python/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  tox.ini
python/ci/: deploy.sh
python/lib/account/v1/: README.md  __init__.py  pyproject.toml
python/lib/account/v1/mesh_account_v1/: account_pb2.py
python/lib/audit/: entry_pb2.py  entry_pb2.pyi  entry_pb2_grpc.py
python/lib/auth/: service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
python/lib/banking/funding/: bankName_pb2.py  bankName_pb2.pyi  bankName_pb2_grpc.py  directEFTMetaData_pb2.py  directEFTMetaData_pb2.pyi  directEFTMetaData_pb2_grpc.py  fee_pb2.py  fee_pb2.pyi  fee_pb2_grpc.py  fundingOrderMetadata_pb2.py  fundingOrderMetadata_pb2.pyi  fundingOrderMetadata_pb2_grpc.py  funding_pb2.py  funding_pb2.pyi  funding_pb2_grpc.py  investecDirectEFTMetadata_pb2.py  investecDirectEFTMetadata_pb2.pyi  investecDirectEFTMetadata_pb2_grpc.py  paymentType_pb2.py  paymentType_pb2.pyi  paymentType_pb2_grpc.py  peachPaymentMetaData_pb2.py  peachPaymentMetaData_pb2.pyi  peachPaymentMetaData_pb2_grpc.py  peachSettlementMetadata_pb2.py  peachSettlementMetadata_pb2.pyi  peachSettlementMetadata_pb2_grpc.py  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py  standardAccountLabels_pb2.py  standardAccountLabels_pb2.pyi  standardAccountLabels_pb2_grpc.py
python/lib/client/: clientType_pb2.py  clientType_pb2.pyi  clientType_pb2_grpc.py
python/lib/config/: environment_pb2.py  environment_pb2.pyi  environment_pb2_grpc.py
python/lib/iam/role/: permission_pb2.py  permission_pb2.pyi  permission_pb2_grpc.py  role_pb2.py  role_pb2.pyi  role_pb2_grpc.py
python/lib/iam/v1/: README.md  __init__.py  pyproject.toml
python/lib/instrument/: service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
python/lib/instrument/fee/: dataAmount_pb2.py  dataAmount_pb2.pyi  dataAmount_pb2_grpc.py  dataPerUnit_pb2.py  dataPerUnit_pb2.pyi  dataPerUnit_pb2_grpc.py  dataRate_pb2.py  dataRate_pb2.pyi  dataRate_pb2_grpc.py  data_pb2.py  data_pb2.pyi  data_pb2_grpc.py  fee_pb2.py  fee_pb2.pyi  fee_pb2_grpc.py  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
python/lib/instrument/feeprofile/: aum_pb2.py  aum_pb2.pyi  aum_pb2_grpc.py  feeProfile_pb2.py  feeProfile_pb2.pyi  feeProfile_pb2_grpc.py  lifecycleEventCalculationConfigAmount_pb2.py  lifecycleEventCalculationConfigAmount_pb2.pyi  lifecycleEventCalculationConfigAmount_pb2_grpc.py  lifecycleEventCalculationConfigRate_pb2.py  lifecycleEventCalculationConfigRate_pb2.pyi  lifecycleEventCalculationConfigRate_pb2_grpc.py  lifecycleEventCalculationConfigType_pb2.py  lifecycleEventCalculationConfigType_pb2.pyi  lifecycleEventCalculationConfigType_pb2_grpc.py  lifecycleEventCalculationConfig_pb2.py  lifecycleEventCalculationConfig_pb2.pyi  lifecycleEventCalculationConfig_pb2_grpc.py  lifecycleEventCategory_pb2.py  lifecycleEventCategory_pb2.pyi  lifecycleEventCategory_pb2_grpc.py  lifecycleEvent_pb2.py  lifecycleEvent_pb2.pyi  lifecycleEvent_pb2_grpc.py  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py  tokenisation_pb2.py  tokenisation_pb2.pyi  tokenisation_pb2_grpc.py
python/lib/ledger/: __init__.py  amount.py  amount_pb2.py  amount_pb2.pyi  amount_pb2_grpc.py  network.py  network_pb2.py  network_pb2.pyi  network_pb2_grpc.py  token_pb2.py  token_pb2.pyi  token_pb2_grpc.py  transaction_pb2.py  transaction_pb2.pyi  transaction_pb2_grpc.py
python/lib/legal/: companyPublicContactInfo_pb2.py  companyPublicContactInfo_pb2.pyi  companyPublicContactInfo_pb2_grpc.py  companyRepresentative_pb2.py  companyRepresentative_pb2.pyi  companyRepresentative_pb2_grpc.py  connectedCompany_pb2.py  connectedCompany_pb2.pyi  connectedCompany_pb2_grpc.py  connectedIndividialConnectionType_pb2.py  connectedIndividialConnectionType_pb2.pyi  connectedIndividialConnectionType_pb2_grpc.py  connectedIndividual_pb2.py  connectedIndividual_pb2.pyi  connectedIndividual_pb2_grpc.py  identificationType_pb2.py  identificationType_pb2.pyi  identificationType_pb2_grpc.py  legalform_pb2.py  legalform_pb2.pyi  legalform_pb2_grpc.py
python/lib/legal/company/: company_pb2.py  company_pb2.pyi  company_pb2_grpc.py  industryClassification_pb2.py  industryClassification_pb2.pyi  industryClassification_pb2_grpc.py  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
python/lib/location/: address_pb2.py  address_pb2.pyi  address_pb2_grpc.py
python/lib/num/: decimal_built_in_conversions.py  decimal_pb2.py  decimal_pb2_grpc.py
python/lib/search/: __init__.py  boolExactCriterion_pb2.py  boolExactCriterion_pb2.pyi  boolExactCriterion_pb2_grpc.py  criterion_pb2.py  criterion_pb2.pyi  criterion_pb2_grpc.py  dateRangeCriterion_pb2.py  dateRangeCriterion_pb2.pyi  dateRangeCriterion_pb2_grpc.py  int64ExactCriterion_pb2.py  int64ExactCriterion_pb2.pyi  int64ExactCriterion_pb2_grpc.py  query_pb2.py  query_pb2.pyi  query_pb2_grpc.py  sorting_pb2.py  sorting_pb2.pyi  sorting_pb2_grpc.py  textExactCriterion.py  textExactCriterion_pb2.py  textExactCriterion_pb2.pyi  textExactCriterion_pb2_grpc.py  textListCriterion_pb2.py  textListCriterion_pb2.pyi  textListCriterion_pb2_grpc.py  textNEExactCriterion_pb2.py  textNEExactCriterion_pb2.pyi  textNEExactCriterion_pb2_grpc.py  textNINListCriterion_pb2.py  textNINListCriterion_pb2.pyi  textNINListCriterion_pb2_grpc.py  textSubstringCriterion_pb2.py  textSubstringCriterion_pb2.pyi  textSubstringCriterion_pb2_grpc.py  uint32ExactCriterion_pb2.py  uint32ExactCriterion_pb2.pyi  uint32ExactCriterion_pb2_grpc.py  uint32ListCriterion_pb2.py  uint32ListCriterion_pb2.pyi  (+10 more)
python/src/buf/validate/: __init__.py
python/src/google/protobuf/: __init__.py
python/src/google/type/: __init__.py
python/src/meshtrade/common/: __init__.py  config.py  grpc_client.py
python/tests/unit/common/: test_with_group.py
(+2044 files in other folders)
