[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mesh"
version = "0.2.0"
authors = [
    { name = "Bernard Bussy", email = "bernard@meshtrade.co" },
]
description = "Integration SDK for Mesh API Services"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["meshtrade", "mesh", "mesh-sdk", "grpc", "betterproto", "grpclib"]
license-files = ["LICENSE"]

[project.urls]
Repository = "https://github.com/meshtrade/api"

# https://pypi.org/classifiers
classifiers = [
    # --- Development Status ---
    "Development Status :: 1 - Planning",

    # --- Audience & Topic ---
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",

    # --- Python Versions Supported ---
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "grpcio >= 1.73.0, < 2.0",
    "protobuf >= 6.31.1, < 7.0",
]

[project.optional-dependencies]
dev = [
    "pip-tools ~= 7.4.1",
    "ruff ~= 0.11.13",
    "pytest ~= 8.4.0",
    "build ~= 1.2.2",
    "twine ~= 6.1.0",
    "tox ~= 4.26.0",
    "types-protobuf ~= 6.30.2.20250516",
]

[tool.setuptools.packages.find]
where = ["src"]  # Look for packages in the 'src' directory

# --- Ruff Configuration (Linter and Formatter) ---
[tool.ruff]
target-version = "py38"
line-length = 88
exclude = ["*_pb2.py"]

[tool.ruff.lint]
# E/W: flake8 errors/warnings | F: Pyflakes
# I: isort | B: flake8-bugbear | C4: flake8-comprehensions
# SIM: flake8-simplify | UP: pyupgrade | TID: flake8-tidy-imports
select = ["E", "W", "F", "I", "B", "C4", "SIM", "UP", "TID"]
