[project]
name = "mesh-iam-v1"
version = "0.2.0"
authors = [
    { name = "Bernard Bussy", email = "bernard@meshtrade.co" },
]
description = "Integration SDK for the iam v1 API service."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["meshtrade", "mesh-sdk", "grpc", "betterproto", "grpclib"]
license-files = ["LICENSE"]

# https://pypi.org/classifiers
classifiers = [
    # --- Development Status ---
    "Development Status :: 1 - Planning",

    # --- Audience & Topic ---
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",

    # --- Python Versions Supported ---
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "grpcio==1.73.0",
    "protobuf==6.31.1",
]

[tool.setuptools.packages.find]
# Leaving this section is empty to allow setuptools automatically
# discover packages in the same directory as this pyproject.toml.